[package]
name = "jsonm"
version = "0.1.0"
authors = ["Andrew Nester <andrew.nester.dev@gmail.com>"]
repository = "https://github.com/andrewnester/rust-jsonm"
license = "MIT"
description = "jsonm implementation port for Rust."

[dependencies]
serde = "1.0.79"
regex = "1"

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]