[package]
name = "jsonm"
version = "0.1.4"
authors = ["Andrew Nester <andrew.nester.dev@gmail.com>"]
repository = "https://github.com/andrewnester/rust-jsonm"
homepage = "https://github.com/andrewnester/rust-jsonm"
license = "MIT"
readme = "README.md"
description = """
jsonm implementation port for Rust.

jsonm is a fast and safe way to compress JSON messages using memoization. 
jsonm makes messages up to several orders of magnitude smaller by getting rid of repeated names and values.
"""
categories = ["compression"]
keywords = ["json", "jsonm", "compress"]

[dependencies]
serde = "1.0.79"
regex = "1"

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[badges]
travis-ci = { repository = "andrewnester/rust-jsonm" }